# GeminiMCPRelay

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
app/: api.py  formatters.py  gemini_parser.py  mcp_manager.py  orchestrator.py
gemini_mcp_relay/: __init__.py  client.py  interceptors.py  mcp_manager.py  orchestrator.py
gemini_mcp_relay/server/: api.py  main.py
tests/: test_calculation.py  test_endpoints.py  test_error_handling.py  test_excluded_tools.py  test_get_tools.py  test_history_unsquash.py  test_interceptors.py  test_local_tools.py  test_mcp_resources.py  test_mcp_resources_exclusion.py  test_streaming_raw.py  test_thought_signature.py  test_tracing.py
